--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head></head>
-  <body>
-    text="Hello, World!"
+  <body text="Hello, World!">
   </body>
 </html>
