--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head></head>
-  <body text="Hello, World!">
+  <body>
+    <h1>Linux!!</h1>
   </body>
 </html>
