--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
 <body>
 	<script>
 		var loadFile = function(event) {
