--- a/example.html
+++ b/example.html
@@ -1,6 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    
-  </body>
-</html>
+<head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+	<video height="600px" width="800px" controls="true" src="" id="output"></video>
+</body>
+	<style>
+		body {
+			background-color: #d1a038;
+			background-image: linear-gradient(to left, #3868d1, #9b38d1, #d1385c, #3868d1)
+		}
+	</style>
