--- a/example.html
+++ b/example.html
@@ -2,7 +2,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<video height="600px" width="800px" controls="true" src="audio.avi" id="output"></video>
+	<video height="600px" width="800px" controls="true" src="baba.avi" id="output"></video>
 </body>
 	<style>
 		body {
