--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
 				};
 	</script>
 	<input type="file" accept="video/*" onchange="loadFile(event)"></input><video height="600px" width="800px" controls="true" src="" id="output"></video></body>
+	<button type="button" name="link2example">Example video</button>
 	<style>
+		button {
+			color: #ffffff;
+			background-color: #5c3f5d;
+			font-size: 14px;
+			border: 0px solid #5c3f5d;
+			border-radius: 45px;
+			cursor: pointer
+		}
+		button:hover {
+			color: #aca0f7;
+			background-color: #5c3f5d;
+		}
 		body {
 			background-color: #d1a038;
 			background-image: linear-gradient(to bottom, #3868d1, #9b38d1, #d1385c, #3868d1)
