--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<title>Simple video player</title>
 	<script>
 		var loadFile = function(event) {
 					var output = document.getElementById('output');
