--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+	<link rel="stylesheet" href="styles.css"></link>
 	<title>Simple video player</title>
 	<script>
 		var loadFile = function(event) {
@@ -13,26 +14,9 @@
 				};
 	</script>
 	<video height="600px" width="800px" controls="true" src="" id="output"></video>
-	<input type="file" accept="video/*" onchange="loadFile(event)"></input>
+	<label for="upload" hidden>Browse...</label>
+	<input type="file" accept="video/*" onchange="loadFile(event)" !--hidden-- id="upload"></input>
 	<form action="example.html">
                 <button type="submit" name="link2example">Example video</button>
-        </form>
+	</form>
 </body>
-	<style>
-		button {
-			color: #ffffff;
-			background-color: #5c3f5d;
-			font-size: 14px;
-			border: 0px solid #5c3f5d;
-			border-radius: 45px;
-			cursor: pointer
-		}
-		button:hover {
-			color: #aca0f7;
-			background-color: #5c3f5d;
-		}
-		body {
-			background-color: #d1a038;
-			background-image: linear-gradient(to bottom, #3868d1, #9b38d1, #d1385c, #3868d1)
-		}
-	</style>
